# postgis-snowflake-intelligence-demo

./: .cursorrules  .gitignore  CITATION.cff  NOTICE  QUICKSTART.md  README.md  SCHEMA_REFERENCE.md  Taskfile.yml  demographics_enrichment.csv  maintenance_requests.csv  neighborhoods.csv  power_grid_enrichment.csv  pyproject.toml  street_lights.csv  suppliers.csv  weather_enrichment.csv
.streamlit/: config.toml  secrets.toml.example
dashboard/: app.py  config.py  db_utils.py  map_utils.py  requirements.txt  run.py
data/: README.md  __init__.py  demographics_enrichment.csv  generate_all.py  generate_all_data.sh  generate_maintenance_history.py  generate_sample.py  load_data.sql  maintenance_requests.csv  neighborhoods.csv  power_grid_enrichment.csv  sample_demographics_enrichment.csv  sample_maintenance_requests.csv  sample_neighborhoods.csv  sample_power_grid_enrichment.csv  sample_street_lights.csv  sample_suppliers.csv  sample_weather_enrichment.csv  street_lights.csv  suppliers.csv  weather_enrichment.csv
init/: 00_init_all.sql  01_enable_extensions.sql  02_enable_wal.sql  03_create_base_tables.sql  04_create_enrichment_tables.sql  05_create_enriched_views.sql  06_create_indexes.sql  07_create_publication.sql  README.md  reset_database.sql
snowflake/: 07_cortex_search_setup.sql  08_cortex_analyst_setup.sql  08_ml_training_view.sql  09_ml_model_training.sql  09_ml_training_view.sql  10_ml_model_training.sql  11_ml_queries.sql  OPENFLOW_QUICK_REFERENCE.sql  README.md  SNOWFLAKE_INTELLIGENCE_QUESTIONS.md  streetlights_semantic_model.yaml
(+7 files in other folders)
