[project]
name = "postgis-snowflake-intelligence-demo"
version = "1.0.0"
description = "PostgreSQL/PostGIS + Snowflake Openflow CDC + Snowflake Intelligence Demo - Street Lights Maintenance"
authors = [
    {name = "Kamesh Sampath"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "shapely>=2.0.2",
    "numpy>=1.24.3",
    "pandas>=2.0.3",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "streamlit>=1.28.0",
    "folium>=0.15.0",
    "streamlit-folium>=0.15.0",
    "plotly>=5.17.0",
    "matplotlib>=3.7.0",
    "sqlalchemy>=2.0.0",
    "snowflake-connector-python>=3.6.0",
]

[project.scripts]
dashboard = "dashboard.run:main"
generate-all-data = "data.generate_all:main"
generate-neighborhoods = "data.generate_neighborhoods:main"
generate-lights = "data.generate_street_lights:main"
generate-maintenance = "data.generate_maintenance_history:main"
generate-suppliers = "data.generate_suppliers:main"
generate-enrichment = "data.generate_enrichment_data:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dashboard", "data"]

[tool.uv]
dev-dependencies = [
    "watchdog>=6.0.0",
]
